Add some effects; demo them in index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
      </div>
   </div>
 
+  <h1> Input Fields </h1>
+  <p> use the 'jr-highlighted' class to apply an effect on focus</p>
+  <input type='text' class='jr-highlighted'>
+
+  <h1> Tilty divs </h1>
+  <p> 'jr-tilty' class to tilt a div on hover</p>
+  <div id='tilty' class='jr-tilty'> Woo! </div>
+
+  <h1> Growing divs </h1>
+  <p> 'jr-grow' class to tilt a div on hover</p>
+  <div class='grow jr-grow-10'> 10% </div>
+  <div class='grow jr-grow-20'> 20% </div>
+  <div class='grow jr-grow-30'> 30% </div>
+
 </body>
 
 </html>
