--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <link rel='stylesheet' href='css/main.css'>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script>
+  <script src='javascripts/jr-framework.js'></script>
+  <script src='javascripts/main.js'></script>
 </head>
 
 <body>
