Striped table jQuery plugin using underscore

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+  <h1> Striped table </h1>
+  <table id='example-table'>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+    <tr><td> Hellllooooooooo</td></tr>
+  </table>
+
   <h1> Rounded button </h1>
   <p> Create a rounded button with "@include rounded-button([radius in px])"
   <div id='example-rounded'>Click Me</div>
